apis/learning_api/learning-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: learning-api
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: learning-api
        environment: production
    spec:
      restartPolicy: Always
      containers:
        - image: ldssa/learning-api:92a430a
          name: learning-api
          resources: {}
          livenessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: learning-api.lisbondatascience.org
              path: /random
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: learning-api.lisbondatascience.org
              path: /random
              port: 8080
            timeoutSeconds: 5
