apis/learning_api/learning-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: loadbalancer
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - learning-api.lisbondatascience.org
      secretName: learning-api-crt
  rules:
    - host: learning-api.lisbondatascience.org
      http:
        paths:
        - path: /
          backend:
            serviceName: learning-api
            servicePort: 8080
